--- a/about.html
+++ b/about.html
@@ -24,12 +24,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/firstbootstrapwebsite">Home</a>
                     </li>
-                    <li class="nav-item about">
-                        <a class="nav-link" href="/about.html">About</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/firstbootstrapwebsite/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -48,7 +48,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/firstbootstrapwebsite/contact.html">Contact Us</a>
 
 
                 </ul>
